# opengl-test

./: CMakeLists.txt  README.MD  main.cpp
src/: AppContext.h  RenderEngine.cpp  RenderEngine.h  Shader.cpp  Shader.h  helperFunctions.h  main.cpp
src/shaders/: shader.fs  shader.fsh  shader.vsh
